# uptime-kuma-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  analisi.md
docs/project/: high-level-analysis.md  low-level-analysis.md
docs/superpowers/plans/: 2026-06-28-project-skeleton.md  2026-06-28-vertical-slice-monitors.md
docs/superpowers/specs/: 2026-06-28-project-skeleton-design.md  2026-06-28-vertical-slice-monitors-design.md
src/: config.rs  error.rs  main.rs  model.rs  state.rs
src/api/: auth.rs  incidents.rs  mod.rs  monitors.rs  uptime.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/poller/: incidents.rs  mod.rs  prometheus.rs  status_page.rs
src/store/: mod.rs  noop.rs  schema.sql  sqlite.rs
tests/fixtures/: status-page-config.json  status-page-heartbeat.json
