[package]
name = "uptime-kuma-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
redis = { version = "1.3.0", features = ["tokio-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
